--- a/app/views/admin/users/filterUsers.scala.html
+++ b/app/views/admin/users/filterUsers.scala.html
@@ -18,7 +18,7 @@
                         <span class="icon">
                             <i class="icon-pencil"></i>
                         </span>
-                        <h5>标签组筛选</h5>
+                        <h5>用户筛选</h5>
                     </div>
                     <div class="widget-content nopadding">
                         <form class=" form-horizontal" id="J_filterForm" method="get" action="@controllers.admin.routes.Users.filterUsers">
