--- a/app/views/admin/users/orders.scala.html
+++ b/app/views/admin/users/orders.scala.html
@@ -37,7 +37,7 @@
                                         <input type="radio"  name="status" value="0"> 未购买
                                     </div>
                                     <div class="radio">
-                                        <input type="radio" name="status" value="1"> 已购买
+                                        <input type="radio" name="status" value="1"> 已购买成功
                                     </div>
 
 
