--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -198,7 +198,7 @@
 <!--[if lt IE 9]>
 <script src="/assets/js/html5.js" type="text/javascript"></script>
 <![endif]-->
-<script type="text/javascript" src="/assets/js/front/seajs/2.0/sea.js" data-config="/assets/js/front/app/config.js" id="seajsnode"></script>
+<script type="text/javascript" src="/assets/js/front/seajs/2.0/sea.js?v=2013040426" data-config="/assets/js/front/app/config.js" id="seajsnode"></script>
 <script src="http://l.tbcdn.cn/apps/top/x/sdk.js?appkey=21136607"></script>
 @js
 
