--- a/app/views/users/msg/appraisal.scala.html
+++ b/app/views/users/msg/appraisal.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User])
 @views.html.template(
 user
-)(css="/assets/css/template/user.css") {
+)(css="/assets/css/template/user.setting.css") {
 <div class="container" id="home">
     <div class="content clearfix">
         <div class="side-nav">
