--- a/app/views/users/msg/system.scala.html
+++ b/app/views/users/msg/system.scala.html
@@ -8,7 +8,7 @@ user
             <h2>我的通知</h2>
             <ul class="nav_r">
                 <li>
-                    <a href="/user/msg/system">系统通知</a>
+                    <a class="on" href="/user/msg/system">系统通知</a>
                 </li>
                 <li>
                     <a href="/user/msg/comment">评论我的</a>
@@ -19,9 +19,7 @@ user
                 <li>
                     <a href="/user/msg/at">@@我的</a>
                 </li>
-                <li>
-                    <a class="on" href="/user/msg/appraisal">我的求鉴定</a>
-                </li>
+
             </ul>
         </div>				<div class="main-content">
         <div class="my_comment">
