--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -66,7 +66,7 @@
                 <li class='@("on".when(nav == "miss"))'>  <a href="/miss" >生活馆</a> </li>
             </ul>
 
-
+            <a class="btn-signIn fr" href="javascript:;" rel="signIn">签到</a>
             <!--分享宝贝-->
             <div class="shareIt fr">
                 <a  class="btn-sg" href="javascript:;">分享好东西<span class="arrow-dn"></span></a>
