--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -122,39 +122,80 @@
     </div>
 
 
-    <div class="footer clearfix" id="footer">
+  <!--  <div class="footer clearfix" id="footer">
         <a class="smeiteLink" href=""></a>
-        <div class="footer-nav clearfix">
-            <dl class="about">
-                <dt>关于我们</dt>
-                <dd><a href="@controllers.routes.Infos.aboutUs" target="_blank">关于我们</a></dd>
-                <dd><a href="@controllers.routes.Infos.contactUs" target="_blank">合作联系</a></dd>
-                <dd><a href="@controllers.routes.Infos.siteMap" target="_blank">网站地图</a></dd>
-                <dd><a href="/forum/view/1" target="_blank">提建议</a></dd>
-            </dl>
-            <dl class="followus">
-                <dt>关注我们</dt>
-                <dd><a class="f-Qzone" href="http://user.qzone.qq.com/1469909930"  target="_blank">QQ空间</a></dd>
-                <dd><a class="f-sina" href="http://weibo.com/smeite"  target="_blank">新浪微博</a></dd>
-                <dd><a  class="f-tencent" href="http://t.qq.com/smeitecom"  target="_blank">腾讯微博</a></dd>
 
-            </dl>
-            <dl class="service">
-                <dt>服务支持</dt>
-                <dd>客服QQ：1469909930</dd>
-
-            </dl>
-            <dl class="how">
-                <dt>爱上食美特</dt>
-                <dd><a href="/jie" target="_blank">爱美食</a></dd>
-                <dd><a href="/miss" target="_blank">爱生活</a></dd>
-
-
-            </dl>
-        </div>
 
         <p class="cp">Copyright ©2012-2013 smeite.com, All Rights Reserved. <a href="http://www.miitbeian.gov.cn/">津ICP备12008177号-1</a></p>
-    </div>
+    </div>-->
+    <div id="footer">
+
+        <div class="footer-inner">
+            <div class="global-footer">
+                <div class="global-footer-inner">
+
+                    <div class="footer-nav clearfix">
+                        <dl class="about">
+                            <dt>关于我们</dt>
+                            <dd><a href="@controllers.routes.Infos.aboutUs" target="_blank">关于我们</a></dd>
+                            <dd><a href="@controllers.routes.Infos.contactUs" target="_blank">合作联系</a></dd>
+                            <dd><a href="@controllers.routes.Infos.siteMap" target="_blank">网站地图</a></dd>
+
+                        </dl>
+                        <dl class="followus">
+                            <dt>关注我们</dt>
+                            <dd><a class="f-Qzone" href="http://user.qzone.qq.com/1469909930"  target="_blank">QQ空间</a></dd>
+                            <dd><a class="f-sina" href="http://weibo.com/smeite"  target="_blank">新浪微博</a></dd>
+                            <dd><a  class="f-tencent" href="http://t.qq.com/smeitecom"  target="_blank">腾讯微博</a></dd>
+
+                        </dl>
+                        <dl class="how">
+                            <dt>爱上食美特</dt>
+                            <dd><a href="/jie" target="_blank">爱上美食</a></dd>
+                            <dd><a href="/miss" target="_blank">爱上生活</a></dd>
+                            <dd><a href="/forum/view/1" target="_blank">提建议</a></dd>
+                        </dl>
+                        <dl class="service">
+                            <dt>服务支持</dt>
+                            <dd>QQ客服：1469909930</dd>
+                            <dd>QQ群：1469909930</dd>
+                            <dd>阿里旺旺：1469909930</dd>
+                        </dl>
+                    </div>
+
+                    <div class="footer-erweima">
+                        <p>扫微信二维码</p>
+                        <p>每天有奖问答</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="global-friend-links">
+                <div class="friend-links-inner clearfix">
+                    <h4 class="friend-links-tit">友情链接：</h4>
+                        <div class="friend-links-item">
+
+                                <a href="" target="_blank">去哪儿酒店</a>
+                                <a href="" target="_blank">酷讯旅游网</a>
+                                <a href="" target="_blank">悦己乐活</a>
+                                <a href="" target="_blank">中国婚纱摄影网</a>
+
+                                <a href="" target="_blank">车讯网</a>
+                                <a href="" target="_blank">车讯网</a>
+                                <a href="" target="_blank">车讯网</a>
+                                <a href="" target="_blank">车讯网</a>
+                                <a href="" target="_blank">竞彩网</a>
+                                <a href="" target="_blank">北京房产</a>
+                                <a href="" target="_blank">小说</a>
+                                <a href="" target="_blank">更多&gt;&gt;</a>
+
+                        </div>
+                </div>
+            </div>
+
+            <p class="cp">Copyright ©2012-2013 smeite.com, All Rights Reserved. <a href="http://www.miitbeian.gov.cn/">津ICP备12008177号-1</a></p>
+        </div>
+
     <a id="returnTop" href="javascript:;">回到顶部</a>
 </div>
 @if(user.isEmpty){
