--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -39,7 +39,7 @@ ul, ol, li {
 
 a {
     text-decoration: none;
-    color: #555;
+    color: #333;
 }
 a:hover{
     text-decoration: underline;
@@ -2494,28 +2494,27 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 
 */
 
-.smeiteLink {
-    position: absolute;
-    margin-left: -50px;
-    top: 25px;
-    left: 50%;
-    width: 100px;
-    height: 100px;
+#footer .footer-inner {
+    background-color: #fff
 }
 
-.footer {
-    height: 192px;
+#footer .global-footer-inner, #footer .friend-links-inner {
+    width: 980px;
+    margin: 0 auto
+}
+
+#footer .global-footer {
+    border-top: 2px solid #666
+}
+
+#footer .global-footer-inner {
     position: relative;
-    background: url(images/footer-bg.png) repeat-x;
+    zoom: 1;
+    padding: 20px 0 ;
 }
 
 #footer .footer-nav {
-
-    width: 960px;
-    height: 120px;
     margin: 0 auto;
-    padding: 25px 0 0;
-    background: url(images/footer-logo.png) no-repeat center 25px;
     overflow: hidden;
 }
 
@@ -2523,7 +2522,7 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
     float: left;
     display: inline;
     width: 150px;
-    margin-left: 50px;
+    margin-right:30px;
 }
 
 #footer .footer-nav dt {
@@ -2538,12 +2537,10 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
     margin-top: 10px;
 }
 
-#footer .footer-nav a {
-    color: #666;
-}
 
-#footer .footer-nav a:hover {
-    color: #666;
+
+#footer  a:hover {
+    color: #ff7f00;
     text-decoration: underline;
 }
 
@@ -2556,22 +2553,6 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
     background-repeat: no-repeat;
 }
 
-#footer .footer-nav dl.service {
-    float: right;
-    width: 200px;
-    margin-left: 0;
-}
-
-#footer .footer-nav dl.service dd {
-    float: left;
-    width: 100px;
-    text-align: left;
-}
-
-#footer .footer-nav dl.how {
-    float: right;
-    width: 130px;
-}
 
 a.f-sina {
     background-position: 0 0;
@@ -2589,6 +2570,48 @@ a.f-tencent {
     background-position: 0 -48px;
 }
 
+#footer .footer-erweima {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    width: 85px;
+    height: 36px;
+    padding-top: 87px;
+    background: url(images/footer-erweima-ico.png) no-repeat center top
+}
+
+#footer .footer-erweima p {
+    font: 12px/18px SimSun;
+    color: #333;
+    text-align: center
+}
+
+#footer .friend-links-inner {
+    padding-bottom: 15px
+}
+
+#footer .global-friend-links .friend-links-tit {
+    float: left;
+    margin-right: 10px;
+    color: #666;
+    font-weight: normal
+}
+
+#footer .global-friend-links .friend-links-item {
+    float: left;
+    overflow: hidden;
+    height: 22px;
+    width: 820px
+}
+
+#footer .global-friend-links .friend-links-item  a {
+    margin-right: 10px;
+
+}
+
+#footer .global-friend-links .friend-links-more {
+    float: right
+}
 
 
 #footer p.cp {
@@ -2597,6 +2620,7 @@ a.f-tencent {
     width: 100%;
     text-align: center;
 }
+
 /*return top 样式*/
 /**
  * Created by zuosanshao.
