--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -409,13 +409,15 @@ nav="index"
 <div class="adv">
     <a href="@bottom.link"><img src="@bottom.pic" alt="@bottom.title"></a>
 </div>
+
+
 <!-- end -->
 <!--推荐品牌-->
-<!--
+
 <div class="brands">
     <div class="tabs hd clearfix">
-        <h3> 美食大全  <span class="vline">|</span></h3>
-        <h3> 创意大全</h3>
+        <h3> 美食品牌  <span class="vline">|</span></h3>
+        <h3> 居家品牌</h3>
     </div>
     <div class="panes">
     <ul class="brand-list clearfix">
