--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content=@keywords>
     <meta name="description" content=@description>
     <link rel="shortcut icon" type="image/png" href="/favicon.ico">
-    <link rel="stylesheet" href="/assets/css/global/global.css?v=2013040426">
-    <link rel="stylesheet" href="@css?v=2013040426">
+    <link rel="stylesheet" href="/assets/css/global/global.css?v=2013040427">
+    <link rel="stylesheet" href="@css?v=2013040427">
 </head>
 <body id="J_Page">
 
@@ -65,15 +65,27 @@
                 <li class='@("on".when(nav == "jie"))'><a href="/jie" >美食街</a></li>
                 <li class='@("on".when(nav == "miss"))'>  <a href="/miss" >生活馆</a> </li>
             </ul>
+            <div class="signIn fr">
+                <a class="btn-signIn" href="#" rel="signIn">签到</a>
+                <div id="checkin_intro" class="dropdown signIn-dropdown" >
 
-            <a class="btn-signIn fr" href="javascript:;" rel="signIn">签到</a>
+                    集分宝：<b class="checkin_days">0</b>&nbsp;个<br/>
+
+                    <a href="#" target="_blank" class="signIn-prize">签到有奖</a>
+                  <p>
+                      签到送集分宝，每次1-20个集分宝，随机赠送
+                  </p>
+                    <a href="" target="_blank" class="invite">邀请可获更多集分宝</a>
+
+                </div>
+            </div>
+
             <!--分享宝贝-->
             <div class="shareIt fr">
                 <a  class="btn-sg" href="javascript:;">分享好东西<span class="arrow-dn"></span></a>
                 <ul class="dropdown shareit-dropdown" >
                     <li class="sg-li"><a rel="shareGoods" href="javascript:;" class="hd-share-goods">发布宝贝</a></li>
                     <li><a href="@controllers.routes.Themes.edit(0)" rel="createTheme" class="hd-create-topic">创作主题</a></li>
-
                 </ul>
 
             </div>
@@ -122,12 +134,6 @@
     </div>
 
 
-  <!--  <div class="footer clearfix" id="footer">
-        <a class="smeiteLink" href=""></a>
-
-
-        <p class="cp">Copyright ©2012-2013 smeite.com, All Rights Reserved. <a href="http://www.miitbeian.gov.cn/">津ICP备12008177号-1</a></p>
-    </div>-->
     <div id="footer">
 
         <div class="footer-inner">
@@ -239,7 +245,7 @@
 <!--[if lt IE 9]>
 <script src="/assets/js/html5.js" type="text/javascript"></script>
 <![endif]-->
-<script type="text/javascript" src="/assets/js/front/seajs/2.0/sea.js?v=2013040426" data-config="/assets/js/front/app/config.js" id="seajsnode"></script>
+<script type="text/javascript" src="/assets/js/front/seajs/2.0/sea.js?v=2013040427" data-config="/assets/js/front/app/config.js" id="seajsnode"></script>
 <script src="http://l.tbcdn.cn/apps/top/x/sdk.js?appkey=21136607"></script>
 @js
 
