--- a/public/assets/css/template/index.css
+++ b/public/assets/css/template/index.css
@@ -52,7 +52,7 @@
 .follow-us .a-weibo{float:left}
 .follow-us .a-weixin{float:right;}
 .follow-us .text{line-height:18px;height:18px;margin-top:5px;font-weight:normal;color:#666;clear:both}
-.follow-us .weixin { width: 210px; height: 282px; background: url(images/smeite-weixin.png) no-repeat; position: absolute;top: -282px;left: 0; z-index: 1;display: none;
+.follow-us .weixin { width: 210px; height: 206px; background: url(images/smeite-weixin.png) no-repeat; position: absolute;top: -206px;left: 0; z-index: 1;display: none;
 }
 
 
@@ -224,10 +224,7 @@
     vertical-align: middle
 }
 /*category floor end*/
-/*adv */
-.adv{
-    margin: 15px 0;
-}
+
 
 /*tab end*/
 /*brand start*/
@@ -288,6 +285,9 @@
 }
 .brands h3.current{
     color: #e26;
+}
+.adv{
+   margin-bottom: 20px;
 }
 
 
