--- a/app/views/users/commission/myCredits.scala.html
+++ b/app/views/users/commission/myCredits.scala.html
@@ -41,8 +41,8 @@ user
             <div class="help">
                 <div class="help-title">帮助</div>
                 <ul>
-                    <li><a href="#" target="_blank">了解什么是购物返现？</a></li>
-                    <li><a href="#" target="_blank">了解什么是集分宝?</a></li>
+                    <li><a href="/rebate" target="_blank">了解什么是购物返现？</a></li>
+                    <li><a href="/jifenbao" target="_blank">了解什么是集分宝?</a></li>
 
 
                 </ul>
