--- a/app/views/users/follow.scala.html
+++ b/app/views/users/follow.scala.html
@@ -55,7 +55,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     </div>
                     <div class="follow">
 
-                        <div href="#" class="followed-btn">已关注<span class="mr5 ml5">|</span>
+                        <div  class="followed-btn">已关注<span class="mr5 ml5">|</span>
                             <a rel="removefollow"href="javascript:;" data-followtype="2" data-userid="@user.id.get" data-usernick="@user.name">取消</a>
                         </div>
                     </div>
