--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -28,7 +28,7 @@
             </div>
             <div class="hd-right">
                 <div class="gm-third-login">
-                    <a href="#" data-type="third" class="third-login" target="_blank">返利&nbsp;•&nbsp;搜索&nbsp;•&nbsp;教程</a>
+                    <a href="/rebate" data-type="third" class="third-login" target="_blank">返利&nbsp;•&nbsp;搜索&nbsp;•&nbsp;教程</a>
 
                 </div>
                 <div class="search" id="search">
@@ -66,12 +66,12 @@
                 <li class='@("on".when(nav == "miss"))'>  <a href="/miss" >生活馆</a> </li>
             </ul>
             <div class="signIn fr">
-                <a class="btn-signIn" href="#" rel="signIn">签到</a>
+                <a class="btn-signIn" href="@controllers.users.routes.Users.signIn" rel="signIn">签到</a>
                 <div id="checkin_intro" class="dropdown signIn-dropdown" >
 
                     集分宝：<b class="checkin_days">0</b>&nbsp;个<br/>
 
-                    <a href="#" target="_blank" class="signIn-prize">签到有奖</a>
+                    <a href="@controllers.users.routes.Users.signIn" target="_blank" class="signIn-prize">签到有奖</a>
                   <p>
                       签到送集分宝，每次1-20个集分宝，随机赠送
                   </p>
