--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -181,19 +181,9 @@
                     <h4 class="friend-links-tit">友情链接：</h4>
                         <div class="friend-links-item">
 
-                                <a href="" target="_blank">去哪儿酒店</a>
-                                <a href="" target="_blank">酷讯旅游网</a>
-                                <a href="" target="_blank">悦己乐活</a>
-                                <a href="" target="_blank">中国婚纱摄影网</a>
+                                <a href="" target="_blank"></a>
 
-                                <a href="" target="_blank">车讯网</a>
-                                <a href="" target="_blank">车讯网</a>
-                                <a href="" target="_blank">车讯网</a>
-                                <a href="" target="_blank">车讯网</a>
-                                <a href="" target="_blank">竞彩网</a>
-                                <a href="" target="_blank">北京房产</a>
-                                <a href="" target="_blank">小说</a>
-                                <a href="" target="_blank">更多&gt;&gt;</a>
+                                <a href="/friends" target="_blank">更多&gt;&gt;</a>
 
                         </div>
                 </div>
